...
                    },
                    registrar = { navController.navigate("registro") },
                    recuperar = { navController.navigate("recuperar") }
                )
            }
            composable("registro") {
                Registro(
                    modifier = Modifier,
                    volver = { navController.popBackStack() },
                    registroExitoso = { nombre ->
                        nombreUsuario = nombre
                        navController.navigate("home") {
                            popUpTo("login") { inclusive = true }
...
